adjusted sidebar to include about section, worked out some spacing issues on homepage and sidebar

--- a/fangirl/style.css
+++ b/fangirl/style.css
@@ -170,7 +170,7 @@ p {
   color: #000;
   font: 1em 'Martel', serif;
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 1.3em;
 }
 
 h1 {
@@ -312,7 +312,7 @@ hr {
 @media screen and (min-width: 1100px) {
 
     .container {
-        width: 80%;
+        width: 90%;
         margin: 0 auto;
     }
 
@@ -329,37 +329,37 @@ hr {
 
   h1 {
       font: 3.5em 'Roboto', Helvetica, sans-serif;
-      width: 80%;
+      width: 90%;
       /*margin: 0 auto;*/
   }
   h2 span {
-    width: 80%;
+    width: 90%;
     color: #46085d;
     font: 2em 'Roboto', Helvetica, sans-serif;}
 
   .story-list {
     /*display: flex;
     margin: 0 auto;*/
-    /*width: 100%;*/
+    width: 90%;
     color: #46085d;
     font: 1.5em 'Roboto', Helvetica, sans-serif;
   }
 
   h2 {
       font: 1em 'Roboto', Helvetica, sans-serif;
-      width: 80%;
+      width: 90%;
       /*margin: 0 auto;*/
   }
 
   h3 {
-    width: 80%;
+    width: 90%;
     font: 1.5em 'Roboto', Helvetica, sans-serif;;
     /*margin: 0 auto;*/
     }
 
     .story-byline {
       margin: 0 auto;
-      width: 100%;
+      width: 90%;
       color: #000;
       font: italic 1em 'Martel', serif;
       margin-top: .5em;
@@ -367,13 +367,13 @@ hr {
 
     p {
       font-size: 1em;
-      width: 80%;
+      width: 90%;
         /*margin: 0 auto;*/
     }
 
   .image-text {
    position: relative;
-   width: 80%; /* for IE 6 */
+   width: 90%; /* for IE 6 */
     }
 
     nav ul {
@@ -408,9 +408,12 @@ hr {
         order: 2;
     }
     .list-photo {
-      width: 80%;
+      width: 90%;
       /*margin: 0 auto;*/
-      /*width: 50%;*/
-
+    }
+    .about {
+      width: 100%;
+      margin-top: 1em;
+      margin-bottom: .5em;
     }
   }
